Attach .gitignore Update repository URL Update README

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "underscore.assert",
+  "name": "underscore.assert.js",
   "main": "underscore.assert.js",
   "version": "1.0.0",
-  "homepage": "https://github.com/piecioshka/underscore.assert",
+  "homepage": "https://github.com/piecioshka/underscore.assert.js",
   "authors": [
     "Piotr Kowalski <piecioshka@gmail.com>"
   ],
