--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "underscore.assert.js",
+    "name": "underscore.assert",
     "version": "1.1.0",
     "description": "Plugin for underscore - add method _.assert",
     "license": "MIT",
