--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "underscore.assert",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Plugin for underscore - add method _.assert",
     "license": "MIT",
     "author": {
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+ssh://git@github.com/piecioshka/underscore.assert.js.git"
+        "url": "git+ssh://git@github.com/piecioshka/underscore.assert.git"
     },
     "keywords": [
         "underscore",
