--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "README.md"
     ],
     "devDependencies": {
+        "coveralls": "^2.11.14",
         "istanbul": "^0.4.5",
         "jasmine": "^2.5.2",
         "json-loader": "^0.5.4",
