--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "build": "webpack --profile",
         "watch": "webpack -w",
         "test": "jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json",
-        "coverage": "istanbul cover jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json",
-        "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls -v"
+        "coverage": "istanbul cover jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json"
     },
     "keywords": [
         "underscore",
@@ -32,7 +31,6 @@
         "README.md"
     ],
     "devDependencies": {
-        "coveralls": "^2.11.14",
         "istanbul": "^0.4.5",
         "jasmine": "^2.5.2",
         "json-loader": "^0.5.4",
