--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": {
         "name": "Piotr Kowalski",
         "email": "piecioshka@gmail.com",
-        "url": "http://piecioshka.pl"
+        "url": "https://piecioshka.pl"
     },
     "repository": {
         "type": "git",
