--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build": "webpack --profile",
         "watch": "webpack -w",
         "test": "jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json",
-        "coverage": "istanbul cover jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json"
+        "coverage": "nyc npm run test"
     },
     "keywords": [
         "underscore",
@@ -31,9 +31,9 @@
         "README.md"
     ],
     "devDependencies": {
-        "istanbul": "^0.4.5",
         "jasmine": "^2.5.2",
         "json-loader": "^0.5.4",
+        "nyc": "^17.1.0",
         "string-replace-loader": "^1.0.5",
         "underscore": "^1.8.3",
         "webpack": "^1.13.3"
