Generate coverage report with nyc

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "build": "webpack --profile",
         "watch": "webpack -w",
         "test": "jasmine JASMINE_CONFIG_PATH=test/unit/jasmine.json",
-        "coverage": "nyc npm run test"
+        "coverage": "nyc npm run test && nyc report --reporter=html"
     },
     "keywords": [
         "underscore",
