--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "underscore.assert",
     "version": "1.2.3",
-    "description": "Plugin for Underscore.js: add method '_.assert', which simplify checking states",
+    "description": "🔨 Plugin for Underscore.js: add method '_.assert', which simplify checking states",
     "license": "MIT",
     "author": {
         "name": "Piotr Kowalski",
